--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   firebase_storage:
   firebase_messaging:
   google_sign_in:
-
+  smooth_page_indicator:
 
 dev_dependencies:
   flutter_test:
