--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   firebase_messaging:
   google_sign_in:
   smooth_page_indicator:
-
+  loading_indicator:
 dev_dependencies:
   flutter_test:
     sdk: flutter
