--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_sign_in:
   smooth_page_indicator:
   loading_indicator:
+  image_picker:
 dev_dependencies:
   flutter_test:
     sdk: flutter
