--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   smooth_page_indicator:
   loading_indicator:
   image_picker:
+  intl:
 dev_dependencies:
   flutter_test:
     sdk: flutter
