--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   google_maps_flutter:
   geocoding:
   geolocator:
+  iconsax:
 #  video_thumbnail:
   animated_text_kit:
   flutter_animate:
