pictures in services view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
     - assets/
     - assets/icons/
     - assets/backgrounds/
+    - assets/services/
     - storage/property/
     - storage/profile/
 
